# statup

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  rust-analyzer.toml
locales/: en.json  fr.json
migrations/: 20250201000001_init.sql  20250201000002_fts.sql  20250201000003_optimize_indexes.sql  20250204000001_icons_and_templates.sql  20250205000001_previous_status.sql  20250206000001_service_icon_name.sql  20250207000001_drop_display_order.sql  20250208000001_settings.sql  20260418000001_event_model_refactor.sql  20260421000001_dashboard_layouts.sql
scripts/: build-css.sh  build-release.sh  coverage.sh
src/: config.rs  error.rs  i18n.rs  lib.rs  main.rs  session.rs  state.rs
src/db/: mod.rs  pool.rs
src/middleware/: auth.rs  csrf.rs  mod.rs  request_id.rs  validated_form.rs
src/models/: builtin_icon.rs  event.rs  event_template.rs  icon.rs  mod.rs  service.rs  user.rs
src/modules/: mod.rs  recent_activity.rs  scheduled_maintenances.rs  services.rs  status_banner.rs
src/repositories/: dashboard_layout_repo.rs  event_repo.rs  event_template_repo.rs  icon_repo.rs  mod.rs  service_repo.rs  settings_repo.rs  user_repo.rs
src/routes/: admin.rs  auth.rs  dashboard.rs  dashboard_layout.rs  events.rs  health.rs  icons.rs  mod.rs  profile.rs  services.rs
src/services/: auth_service.rs  dashboard_layout_service.rs  event_service.rs  event_template_service.rs  icon_service.rs  login_rate_limiter.rs  mod.rs  service_service.rs
static/css/: base.css  components.css  input.css  tokens.css  transitions.css  utilities.css
static/js/: custom-select.js  dashboard-layout.js
templates/: _layout.html  base.html
templates/admin/: dashboard_layout.html  module_config.html  settings.html  users.html
templates/auth/: login.html  register.html
tests/: admin_operations.rs  auth_flow.rs  event_lifecycle.rs
(+29 files in other folders)
