[package]
name = "statup"
version = "0.1.0"
edition = "2024"
description = "Internal IT/Ops status page - self-hostable single binary"
authors = ["Karl"]
license = "AGPL-3.0-or-later"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip", "fs", "trace", "limit", "set-header"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# Templates
askama = { version = "0.12", features = ["with-axum", "serde-json"] }
askama_axum = "0.4"

# Authentication
argon2 = "0.5"
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.12", features = ["sqlite"] }

# Security
csrf = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_html_form = "0.2"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Rate limiting
governor = "0.6"
tower_governor = "0.4"

# Markdown
pulldown-cmark = "0.10"
ammonia = "3"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
uuid = { version = "1", features = ["v4"] }

# Utilities
slug = "0.1"
rand = "0.8"
async-trait = "0.1"
percent-encoding = "2"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
